--- a/dotNet5780_02_1037_5201/dotNet5780_02_1037_5201.csproj
+++ b/dotNet5780_02_1037_5201/dotNet5780_02_1037_5201.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="GuestRequest.cs" />
     <Compile Include="Host.cs" />
+    <Compile Include="HostingUnit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
