just a little change

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *.ide-shm
 *.cache
 *.cache
+.vs/dotNet5780_02_1037_5201/v16/Server/sqlite3/storage.ide
+.vs/dotNet5780_02_1037_5201/v16/.suo
+.vs/dotNet5780_02_1037_5201/v16/Server/sqlite3/storage.ide-wal
+*.ide-wal
+*.ide
+.vs/dotNet5780_02_1037_5201/v16/.suo
+.vs/dotNet5780_02_1037_5201/v16/.suo
+.vs/dotNet5780_02_1037_5201/v16/.suo
